--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
   <script src="src/bundle.js" ></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+  <script src="https://cdn.auth0.com/js/lock/11.3.0/lock.min.js"></script>
+  <script src="https://cdn.auth0.com/js/auth0/9.2.2/auth0.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>
   <link rel="stylesheet" href="https://unpkg.com/react-select/dist/react-select.css">
 </head>
